--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ torchvision==0.11.2
 jupyterlab==3.2.5
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.10.1
+pytest-cov==3.0.0
+pytorch-lightning==1.5.7
